[metadata]
name = deadlineutils
author = Dan Bradham
author-email = danielbradham@gmail.com
summary = Deadline utilities
description-file = README.rst
home-page = http://github.com/danbradham/deadlineutils.git
license = No License
classifier =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    Deadline
[files]
packages = deadlineutils
[bdist_wheel]
universal = 1
